# wired

./: .gitignore  .gitmodules  Dockerfile  INSTALL  LICENSE  Makefile  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.status  configure  configure.in  database.sqlite3  documentation  libssl1.0-dev_1.0.2s-1_deb9u1_amd64.deb  libssl1.0.2_1.0.2s-1_deb9u1_amd64.deb  wired.doxyfile
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libwired/: LICENSE  Makefile  README  config.h  config.h.in  config.m4  config.status  configure  configure.in  wired-Prefix.pch
libwired/libwired/: config.h  config.h.in  configure  wired.h
libwired/libwired/base/: wi-assert.c  wi-assert.h  wi-base.c  wi-runtime.h  wi-version.h
libwired/libwired/crypto/: wi-cipher.c  wi-digest.c  wi-digest.h
libwired/libwired/data/: wi-date.c  wi-string.h
libwired/libwired/file/: wi-file.c  wi-file.h
libwired/libwired/libwired/base/: wi-base.h  wi-byteorder.h  wi-macros.h  wi-private.h
libwired/libwired/libwired/collections/: wi-array.h
libwired/libwired/libwired/data/: wi-data.c  wi-data.h  wi-date.h  wi-string.c
libwired/libwired/libwired/file/: wi-file.c
libwired/libwired/libwired/p7/: wi-p7-spec.c
libwired/libwired/p7/: wi-p7-socket.c  wi-p7-socket.h
libwired/libwired/p7/examples/: wiredclient.c  wiredclient.pl
libwired/libwired/system/: wi-log.c
libwired/libwired/thread/: wi-timer.c
libwired/p7/examples/: Makefile
man/: wired.8  wired.conf.5  wiredctl.1
run/: database.sqlite3  wired  wired.xml  wiredctl
run/etc/: wired.conf
run/files/Drop Box/.wired/: permissions
test/transfertest/: main.c
wired/: accounts.c  accounts.h  banlist.c  banlist.h  boards.c  boards.h  chats.c  chats.h  events.c  events.h  files.c  files.h  index.c  index.h  main.c  main.h  messages.c  messages.h  portmap.c  portmap.h  server.c  server.h  servers.c  servers.h  settings.c  settings.h  trackers.c  trackers.h  transfers.c  transfers.h  users.c  users.h  wired.conf.in  wiredctl.in
